--- a/index.html
+++ b/index.html
@@ -1,2 +1,6 @@
-<h1>Hello!</h1>
+<title>Deenified Preen</title>
+<hr>
+<h1>Who is the Dade?/h1>
+<h2>Bobo the Clown is the current dade</h2>
+  
   
