--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<html>
 <title>Deenified Preen</title>
-<hr>
 <h1>Who is the Dade?/h1>
-<h2>Bobo the Clown is the current dade</h2>
+ <p>The current dade is Bobo the Clown</p>
+</html>
   
   
