--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <title>Deenified Preen</title>
-<h1>Who is the Dade?/h1>
+<h1>Who is the Dade?
  <p>The current dade is Bobo the Clown</p>
 </html>
   
