--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <html>
-<title>Deenified Preen</title>
-<h1>Who is the Dade?
- <p>The current dade is Bobo the Clown</p>
+ <p> toomies getting yibbed</p>
 </html>
   
   
