Background and title added, current dade added

--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
 <html>
- <p> toomies getting yibbed</p>
+ <head>
+  <title>Deenified Preen</title>
+  <link rel="shortcut icon" href="https://images.thdstatic.com/productImages/bd5a99c0-efa7-4b8a-8fde-fc5fe7659349/svn/preen-weed-grass-killer-24-63875-64_1000.jpg" type="image/x-icon">
+ </head>
+ <body>
+ <body bgcolor = #FFEC00>
+  <h1>Who is the Dade?</h1>
+  <br>
+  The current Dade is Bobo the Clown.
+  </body>
 </html>
   
   
